Make small edits

--- a/index.qmd
+++ b/index.qmd
@@ -11,7 +11,7 @@ The conference program, curated by [Hadley Wickham](https://hadley.nz/) and the 
 
 If you're not able to attend the conference in person but still want to be part of the experience, you can host or join a virtual watch party. A virtual watch party is a gathering of like-minded individuals who come together online to share the excitement and enjoy the conference together.
 
-If you're part of a user group and would like support from Posit to host a virtual watch party, simply fill out the form below. We'll review your submission and get back to you shortly with more information!
+If you're part of a user group and would like support from Posit to host a virtual watch party, fill out the form below. We'll review your submission and get back to you shortly with more information!
 
 We look forward to connecting with you at posit::conf(2023)!
 
